Upgrade target JAVA version from 8 to 15